# ness-test-project

./: .env.dev  .env.example  .env.production  .gitignore  PAGE_LOAD_FIX.md  PROJECT_TASKS.md  README.md  bug.py  conftest.py  core_functions.py  models.py  playwright.ini  pyproject.toml  requirements.txt  run_tests_report.py  run_tests_with_report.sh  setup.py
config/: settings.py
data/: scenarios.csv
pages/: __init__.py  base_page.py  cart_page.py  item_page.py  item_page_builder.py  landing_page.py  landing_page_builder.py  login_builder.py  login_page.py  product_page.py  search_builder.py  search_page.py  selected_item_page.py
tests/: test_add_item_to_cart.py  test_ebay_e2e.py  test_login.py  test_search.py
utils/: __init__.py  allure_utils.py  assertion_utils.py  data_provider.py  pagination_utils.py  price_utils.py  screenshot_utils.py  variant_utils.py
